applications/home-cluster-raspi/grafana/ingressRoute/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`grafana-local.rajesh-kumar.in`)
    kind: Rule
    services:
    - name: home-cluster-grafana
      port: 80
      scheme: http
  tls:
    secretName: rancher-tls-cert
